2004-01-25  Alex Schroeder  <alex@gnu.org>

	* spam-stat.el (spam-stat-process-directory-age): New option.
	(spam-stat-process-directory): Use it.

2004-01-24  Hiroshi Fujishima <pooh@nature.tsukuba.ac.jp>  (tiny change)

	* spam-stat.el (spam-stat-reduce-size): Set spam-stat-dirty.
	(spam-stat-save): Accept prefix argument.

2004-01-23  Paul Jarc  <prj@po.cwru.edu>

	* nnmaildir.el (nnmaildir-request-set-mark): Handle the "too many
	links" error.

2004-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el: Advise byte-optimize-form-code-walker to optimize
	the rest of the and/or forms.

2004-01-23  Jesper Harder  <harder@ifa.au.dk>

	* gnus.el (gnus-tmp-grouplens): Define for the sake of backward
	compatibility with old .newsrc.eld files.

	* gnus-xmas.el (gnus-xmas-grouplens-menu-add): Remove.

	* gnus-sum.el (gnus-summary-line-format-alist): Remove grouplens.

	* gnus-start.el (gnus-1): do.

	* gnus-group.el (gnus-group-line-format-alist): do.

	* gnus.el: (gnus-use-grouplens, gnus-visual): do.

	* gnus-gl.el: Remove.

2004-01-23  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-sum.el (gnus-adjust-marks): Now correctly handles a list of
	marks consisting of a single range {for example, (3 . 5)} rather
	than a list of a single range { ((3 . 5)) }.

2004-01-23  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el (spam-stat-store-gnus-article-buffer): Use
	with-current-buffer.
	(spam-stat-store-current-buffer): Use insert-buffer-substring to
	avoid consing a string.

	* mm-util.el (mm-charset-synonym-alist): Add ks_c_5601-1987.
	Remove obsolete entries for big5 and gb2312.

2004-01-22  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-sum.el (gnus-adjust-marks): Avoid splicing null INTO the
	uncompressed list.

2004-01-22  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el (spam-stat-strip-xref): New function.
	(spam-stat-process-directory): Use it.

	* gnus-util.el (gnus-fetch-field): Don't bind case-fold-search